add libraries